<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/external_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_step_thumb"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/vertical_spacing"
                android:contentDescription="@string/cd_step_thumb"
                android:visibility="gone"/>

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/ep_step_video"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/vertical_spacing"
                android:contentDescription="@string/cd_step_video"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_step_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size"
                tools:text="Step 1: Recipe Introduction"/>

            <TextView
                android:id="@+id/tv_step_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_spacing"
                tools:text="Recipe introduction."/>
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/lighter_gray">

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_alignParentStart="true"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_alignParentEnd="true"
            style="?android:attr/borderlessButtonStyle"/>

    </RelativeLayout>

</LinearLayout>
